; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libmpg123/extr_lfs_wrap.c_wrap_destroy.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libmpg123/extr_lfs_wrap.c_wrap_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wrap_data = type { %struct.wrap_data* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @wrap_destroy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wrap_destroy(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.wrap_data*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.wrap_data*
  store %struct.wrap_data* %5, %struct.wrap_data** %3, align 8
  %6 = load i8*, i8** %2, align 8
  %7 = call i32 @wrap_io_cleanup(i8* %6)
  %8 = load %struct.wrap_data*, %struct.wrap_data** %3, align 8
  %9 = getelementptr inbounds %struct.wrap_data, %struct.wrap_data* %8, i32 0, i32 0
  %10 = load %struct.wrap_data*, %struct.wrap_data** %9, align 8
  %11 = icmp ne %struct.wrap_data* %10, null
  br i1 %11, label %12, label %17

12:                                               ; preds = %1
  %13 = load %struct.wrap_data*, %struct.wrap_data** %3, align 8
  %14 = getelementptr inbounds %struct.wrap_data, %struct.wrap_data* %13, i32 0, i32 0
  %15 = load %struct.wrap_data*, %struct.wrap_data** %14, align 8
  %16 = call i32 @free(%struct.wrap_data* %15)
  br label %17

17:                                               ; preds = %12, %1
  %18 = load %struct.wrap_data*, %struct.wrap_data** %3, align 8
  %19 = call i32 @free(%struct.wrap_data* %18)
  ret void
}

declare dso_local i32 @wrap_io_cleanup(i8*) #1

declare dso_local i32 @free(%struct.wrap_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
